--- a/site/src/Bp/CoreBundle/Resources/views/partials/header.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/partials/header.html.twig
@@ -24,7 +24,7 @@
 					<li class="shop">
 						<a href="#">Boutique {{ icons('triangle')|raw }}</a>
 					</li>
-					<li><a href="#">Notre concept</a></li>
+					<li class="not-active"><a href="#">Notre concept</a></li>
 				</ul>
 			</nav>
 			<div class="account-info">
