--- a/site/src/Bp/CoreBundle/Resources/views/PackEditor/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/PackEditor/index.html.twig
@@ -28,10 +28,10 @@
 			
 			<div class="product-container">
 				
-				{% for product in products %}
+				{# {% for product in products %}
 				{% set data = {'product':product} %}
 				{% include 'BpCoreBundle:components:block_product.html.twig' with data %}
-				{% endfor %}
+				{% endfor %} #}
 				
 				<div class="loader-container">
 					<div class="loader"></div>
