--- a/site/src/Bp/CoreBundle/Resources/views/partials/foot.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/partials/foot.html.twig
@@ -31,6 +31,7 @@
 <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
 <script>
 	window.Global = {
+		baseUrl: "{{  asset('') }}",
 		img : {
 			default : "{{  asset('public/img/default-product-pack.png') }}"
 		}
