--- a/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
+++ b/site/src/Bp/AdminBundle/Resources/views/layout.html.twig
@@ -38,6 +38,9 @@
                 <a class="list-group-item" href="{{ url("bp_admin_contract_index") }}">Manageur de contrats</a>
                 <a class="list-group-item" href="{{ url("admin_type") }}">Types</a>
                 <a class="list-group-item" href="{{ url("admin_category") }}">Catégories</a>
+                <a class="list-group-item" href="{{ url("admin_color") }}">Couleurs</a>
+                <a class="list-group-item" href="{{ url("admin_size") }}">Tailles</a>
+                <a class="list-group-item" href="{{ url("admin_brand") }}">Marques</a>
             </div>
         </div>
         <div class="col-md-9">
