--- a/site/src/Bp/ProductBundle/Resources/views/Pack/show.html.twig
+++ b/site/src/Bp/ProductBundle/Resources/views/Pack/show.html.twig
@@ -22,6 +22,10 @@
                 <td>{{ entity.reference }}</td>
             </tr>
             <tr>
+                <th>Spécificités</th>
+                <td>{{ entity.specificite }}</td>
+            </tr>
+            <tr>
                 <th>Price</th>
                 <td>{{ entity.price|price }}</td>
             </tr>
