--- a/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
@@ -21,7 +21,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="category-container">
+			{# <div class="category-container">
 				<a href="#">Produit{{ icons('triangle')|raw }}</a>
 				<div class="list-category">
 					<ul>
@@ -33,7 +33,7 @@
 						<li><a href="#">Type{{ icons('cross')|raw }}</a></li>
 					</ul>
 				</div>
-			</div>
+			</div> #}
 			<div class="category-container">
 				<a href="#">Marque{{ icons('triangle')|raw }}</a>
 				<div class="list-category">
