--- a/site/src/Bp/CoreBundle/Resources/views/partials/header.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/partials/header.html.twig
@@ -39,20 +39,23 @@
 		</div>
 	</div>
 	<div class="sub-menu shop">
-		<div class="container">
-			
-			{% set category = {'title':'Sport','icon':'bracelet','link':path("bp_core_product_index")} %}
-			{% include 'BpCoreBundle:components:category.html.twig' with category %}
+		<div class="overlay"></div>
+		<div class="sub-menu-container">
+			<div class="container">
+				
+				{% set category = {'title':'Sport','icon':'bracelet','link':path("bp_core_product_index")} %}
+				{% include 'BpCoreBundle:components:category.html.twig' with category %}
 
-			{% set category = {'title':'Smartwatch','icon':'smartwatch','link': path("bp_core_product_index") } %}
-			{% include 'BpCoreBundle:components:category.html.twig' with category  %}
+				{% set category = {'title':'Smartwatch','icon':'smartwatch','link': path("bp_core_product_index") } %}
+				{% include 'BpCoreBundle:components:category.html.twig' with category  %}
 
-			{% set category = {'title':'Santé','icon':'sante','link':path("bp_core_product_index") } %}
-			{% include 'BpCoreBundle:components:category.html.twig' with category  %}
+				{% set category = {'title':'Santé','icon':'sante','link':path("bp_core_product_index") } %}
+				{% include 'BpCoreBundle:components:category.html.twig' with category  %}
 
-			{% set category = {'title':'Maison','icon':'home','link':path("bp_core_product_index") } %}
-			{% include 'BpCoreBundle:components:category.html.twig' with category  %}
+				{% set category = {'title':'Maison','icon':'home','link':path("bp_core_product_index") } %}
+				{% include 'BpCoreBundle:components:category.html.twig' with category  %}
 
+			</div>
 		</div>
 	</div>
 	<div class="cart-container">
