--- a/site/web/public/css/style.css
+++ b/site/web/public/css/style.css
@@ -429,6 +429,11 @@ p {
   background-color: #ffffff;
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1) 150ms;
   height: 400px; }
+  .block-product .top-image {
+    height: 215px;
+    width: 215px;
+    margin: 40px;
+    position: absolute; }
   .block-product .image-container {
     position: relative;
     height: 295px;
@@ -1553,17 +1558,32 @@ p {
             fill: #86888b; }
 .main-header .sub-menu {
   position: absolute;
-  background-color: #f5f5f5;
   left: 0;
   height: 0;
-  overflow: hidden;
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   z-index: 100;
   min-width: 100%; }
+  .main-header .sub-menu .sub-menu-container {
+    background-color: #f5f5f5;
+    opacity: 0;
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    height: 100%; }
   .main-header .sub-menu .category {
     opacity: 0; }
   .main-header .sub-menu.open .category {
     opacity: 1; }
+  .main-header .sub-menu.open .sub-menu-container {
+    opacity: 1; }
+  .main-header .sub-menu.open .overlay {
+    opacity: 1; }
+  .main-header .sub-menu .overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    display: none;
+    opacity: 0;
+    z-index: -1;
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
 .main-header .mini-cart {
   width: 505px;
   margin: 0 10px;
