--- a/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
@@ -10,14 +10,12 @@
 			<a href="#" class="button transparent reset">Réinitialiser</a>
 			<div class="category-container">
 				<a href="#">Type{{ icons('triangle')|raw }}</a>
-				<div class="list-category">
+				<div class="list-category type">
 					<ul>
-						<li><a href="#">Type{{ icons('cross')|raw }}</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}</a></li>
+						<li><a href="#" class="sport">Sport{{ icons('cross')|raw }}</a></li>
+						<li><a href="#" class="smartwatch">Smartwatch{{ icons('cross')|raw }}</a></li>
+						<li><a href="#" class="sante">Santé{{ icons('cross')|raw }}</a></li>
+						<li><a href="#" class="home">Home{{ icons('cross')|raw }}</a></li>
 					</ul>
 				</div>
 			</div>
@@ -36,14 +34,14 @@
 			</div> #}
 			<div class="category-container">
 				<a href="#">Marque{{ icons('triangle')|raw }}</a>
-				<div class="list-category">
+				<div class="list-category brand">
 					<ul>
-						<li><a href="#">Type{{ icons('cross')|raw }}r</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}r</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}r</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}r</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}r</a></li>
-						<li><a href="#">Type{{ icons('cross')|raw }}r</a></li>
+						<li><a href="#" class="marque">Type{{ icons('cross')|raw }}r</a></li>
+						<li><a href="#" class="marque">Type{{ icons('cross')|raw }}r</a></li>
+						<li><a href="#" class="marque">Type{{ icons('cross')|raw }}r</a></li>
+						<li><a href="#" class="marque">Type{{ icons('cross')|raw }}r</a></li>
+						<li><a href="#" class="marque">Type{{ icons('cross')|raw }}r</a></li>
+						<li><a href="#" class="marque">Type{{ icons('cross')|raw }}r</a></li>
 					</ul>
 				</div>
 			</div>
