--- a/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
@@ -6,7 +6,8 @@
         <img src="{{ asset('public/img/home-highlight.png') }}" alt="">
         <div class="container">
             <div class="holder">
-                <h5>Envie d'un objet connecté mais peur de sauter le pas ? Avec Wygiwyt tester 4 objets pendant une semaine. Et repartez avec <br/>10 euros de réduction sur votre prochain achat.</h5>
+                <h1>L’essayer c’est l’adopter</h1>
+                <h5>Envie d'un objet connecté mais peur de sauter le pas ? Avec Wygiwyt tester 4 objets pendant deux semaines. Et repartez avec <br/>10 euros de réduction sur votre prochain achat.</h5>
                 <a href="#" class="button not-active">Découvrir wygiwyt en vidéo</a>
             </div>
         </div>
@@ -25,12 +26,12 @@
                     <p>Une idée en tête ? Faites vous plaisir en créant vous même votre pack. Indécis? Choisissez un de nos packs thématiques ou un de nos packs de marque. Il y en a forcément un pour vous.</p>
                 </div>
                 <div class="step">
-                    <h3>Choisissez</h3>
-                    <p>Une idée en tête ? Faites vous plaisir en créant vous même votre pack. Indécis? Choisissez un de nos packs thématiques ou un de nos packs de marque. Il y en a forcément un pour vous.</p>
+                    <h3>Tester</h3>
+                    <p>Testez votre pack pendant une semaine et repartez avec 10 euros à valoir sur votre prochain achat. Renvoyez nous ensuite les objets par le colis prépayé. Partagez avec nous vos avis et cumulez ainsi des crédits Wygiwiyt.</p>
                 </div>
                 <div class="step">
-                    <h3>Choisissez</h3>
-                    <p>Une idée en tête ? Faites vous plaisir en créant vous même votre pack. Indécis? Choisissez un de nos packs thématiques ou un de nos packs de marque. Il y en a forcément un pour vous.</p>
+                    <h3>Acheter</h3>
+                    <p>Un coup de coeur ? Vous pouvez retrouver le produit neuf ou d'occasion sur notre site. Alors n'hésitez plus et faites vous plaisir.</p>
                 </div>
             </div>
         </div>
