--- a/site/src/Bp/CoreBundle/Resources/views/Pack/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Pack/index.html.twig
@@ -18,10 +18,10 @@
 					<h1>{{ packHighlight.name }}</h1>
 					<p>{{ packHighlight.description }}</p>
 					<a href="{{ path("bp_core_pack_show", { id:packHighlight.id }) }}" class="button">Découvrir</a>
-					<div class="price-container">
+					{# <div class="price-container">
 						<a href="#" class="button">Ajouter à mon panier</a>	
 						<p class="price">{{ packHighlight.price|ttcPrice }}</p>
-					</div>
+					</div> #}
 				</div>
 			</div>
 		</div>
